--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
     <string name="menu_settings">Settings</string>
 
     <string name="history_placeholder">Under construction</string>
+
+    <!-- TrainView Texts -->
+    <string name="timer_description">Training time</string>
+    <string name="timer_default">00:00:00</string>
+
+    <string name="button_start">Start training</string>
+    <string name="button_stop">Stop training</string>
+    <!-- TrainView Texts -->
 </resources>
