1. Fixed not being able to connect to sensor when turning bt on after launching the app 2. Added handling for cases when sensor got disconnected 3. Added handling for cases when user turned bt off after launching the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,8 @@
 
 
     <string name="deviceUnreachable">Selected device is unreachable. Could not connect</string>
+    <string name="connectivty_issue">Could not reach bluetooth adapter, please check device settings</string>
+    <string name="bt_disabled">Bluetooth is dissabled, cannot continue</string>
     <string-array name="available_activities">
         <item>Jumping Jack</item>
     </string-array>
